--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <!-- Place the authentication check here -->
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-nav">
+                        <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/Identity/Account/Login" method="post" id="logoutForm" class="navbar-nav">
                             <button type="submit" class="btn btn-link nav-link">Logout</button>
                         </form>
                     }
